# AgentTurnCraft

./: .gitignore  README.md  agent-manage.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: auth.py  config.py  constants.py  database.py  exceptions.py  logging_setup.py  main.py  query_access.py  redis_client.py
backend/app/agent_log/: models.py  service.py
backend/app/chat/: __init__.py  chat_router.py  deepseek_chat_openai.py  open_chat_router.py
backend/app/enums/: __init__.py
backend/app/graph_rag/: __init__.py  chunking.py  db_models.py  extract.py  graph_builder.py  pipeline.py  router.py  schemas.py
backend/app/group_chat/: agent_selector.py  chat_common.py  chat_graph.py  chat_window.py  speaker.py  speaker_selector.py
backend/app/harness/: __init__.py  backend.py  cache.py  config.py  context.py  round.py  runtime.py  tools.py
backend/app/knowledge/: __init__.py  agent_scope.py  binding.py  constants.py  enums.py  schemas.py  tasks.py
backend/app/manage/: __init__.py  authz.py  converters.py  deps.py  login_session.py  rbac_api.py  security.py  seed.py
backend/app/model_manage/: model_cat.py  model_manage_router.py  model_manage_service.py  scheme.py
backend/app/models/: __init__.py  agent_log.py  upload_file.py
backend/app/routers/: __init__.py  agents.py  groups.py  skills.py  upload_file_router.py
backend/app/sandbox/: INTEGRATION.md  (+4 more)
user-service/: .env.example  .gitignore  pyproject.toml
user-service/app/: authz.py  config.py  converters.py  database.py  deps.py  id_generator.py  main.py  security.py  seed.py
(+190 files in other folders)
